[tool.poetry]
name = "incolume.py.vsaliens"
version = "0.1.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages = [
  {include = "incolume/py", from=""},
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
